# weathr

./: Cargo.toml  README.md  config.example.toml
src/: animation_manager.rs  app.rs  app_state.rs  cache.rs  config.rs  display.rs  error.rs  geolocation.rs  lib.rs  main.rs  render.rs
src/animation/: airplanes.rs  chimney.rs  clouds.rs  fireflies.rs  fog.rs  leaves.rs  mod.rs  raindrops.rs  snow.rs  stars.rs  sunny.rs  thunderstorm.rs
src/render/: mod.rs
src/scene/: decorations.rs  house.rs
src/shell/: input.rs  mod.rs  overlay.rs  pty_handler.rs
src/weather/: client.rs  factory.rs  mod.rs  open_meteo.rs  openweathermap.rs  provider.rs  types.rs  weatherapi.rs
tests/: error_test.rs  weather_normalizer_integration_test.rs
